# DriftSense

./: .gitignore  404.html  README.md  deploy_key  deploy_key.pub  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
binningstrategies/: index.html
docs/: binningstrategies.md  drifttypes.md  faqs.md  index.md  installation.md
docs/reference/: api_index.md  calculate_all_features_drift.md  calculate_feature_drift.md  create_drift_report.md  get_bin_edges.md
docs/usage/: get_bin_edges_usage.md  index.md  stability_function.md
driftsense/: __init__.py  calculate_all_features_drift.py  calculate_feature_drift.py  create_drift_report.py  get_bin_edges.py  get_drift_report.py  get_stability_report.py
driftsense/tests/: domain_binning_testing.ipynb  test_binning_1.py  test_binning_2.py
drifttypes/: index.html
faqs/: index.html
installation/: index.html
old_versions/: README.md  driftsense-0.0.2-py3-none-any.whl  mkdocs.yml  pyproject.toml
old_versions/docs/: binningstrategies.md  drifttypes.md  faqs.md  index.md  installation.md
reference/api_index/: index.html
reference/calculate_all_features_drift/: index.html
reference/calculate_feature_drift/: index.html
reference/create_drift_report/: index.html
reference/get_bin_edges/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/binningstrategies/: index.html
site/drifttypes/: index.html
site/faqs/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
usage/: index.html
(+28 files in other folders)
